# Get_GPU_Info

./: CMakeLists.txt  README.md  main.cpp
config/: gpuMonitor.h
src/: gpuMonitor.cpp
